--- a/web/channel/index.html
+++ b/web/channel/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <!-- Include Scala.js compiled code - TODO drop `-fastopt` -->
-    <script type="text/javascript" src="./main.js"></script>
+    <script type="text/javascript" src="../target/scala-3.3.0/sc4pac-web-fastopt/main.js"></script>
   </body>
 </html>
