add background color to code

--- a/web/channel/index.html
+++ b/web/channel/index.html
@@ -49,11 +49,17 @@
       .codebox {
         border:1px solid #888;
         background-color:#eeeeff;
-        <!-- width:300px; -->
+        /* width:300px; */
         overflow:auto;
         overflow-x:auto;
         padding:10px;
       }
+      code {
+        background-color: #eef;
+        padding: 0 3px;
+        border-radius: 2px;
+      }
+
       a {
         text-decoration: none;
         word-break: break-word;
@@ -66,6 +72,7 @@
         position: relative;
         display: inline-block;
         border-bottom: 1px dotted black;
+        padding-bottom: 2px;
       }
       .tooltip .tooltiptext {
         visibility: hidden;
