--- a/web/channel/index.html
+++ b/web/channel/index.html
@@ -16,6 +16,19 @@
           margin-bottom: 0.5em;
           border-bottom: 1px solid #888;
       }
+      a.btn {
+        margin-left: 0.5em;
+        background-color: #555;
+        color: white;
+        border: none;
+        padding: 3px 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+      }
+      a.btn:hover {
+        background-color: #666;
+      }
       #pkginfo ul {
         list-style: none;
         margin: 0;
