always display Conflicts field

--- a/web/channel/index.html
+++ b/web/channel/index.html
@@ -27,7 +27,8 @@
         display: inline-block;
       }
       a.btn:hover {
-        background-color: #666;
+        background-color: #707070;
+        text-decoration: none;
       }
       #pkginfo ul {
         list-style: none;
