--- a/web/channel/index.html
+++ b/web/channel/index.html
@@ -12,9 +12,9 @@
         max-width: 800px;
       }
       h2 {
-          font-size: 1.25em;
-          margin-bottom: 0.5em;
-          border-bottom: 1px solid #888;
+        font-size: 1.25em;
+        margin-bottom: 0.5em;
+        border-bottom: 1px solid #888;
       }
       a.btn {
         margin-left: 0.5em;
@@ -61,8 +61,10 @@
         text-align: left;
       }
       .codebox {
-        border:1px solid #888;
-        background-color:#eeeeff;
+        /* border:1px solid #888; */
+        border-radius: 5px;
+        background-color:#333;
+        color: #ccc;
         /* width:300px; */
         overflow:auto;
         overflow-x:auto;
