prepare inclusion of readme on main website

--- a/web/channel/index.html
+++ b/web/channel/index.html
@@ -7,6 +7,16 @@
     <title>Sc4pac Channel</title>
   </head>
   <body>
+    <nav class="app-nav">
+      <ul>
+        <li>
+          <a href="/#/" title="Home">Home</a>
+        </li>
+        <li>
+          <a href="/channel/" target="_self" title="Channel" class="active">Channel</a>
+        </li>
+      </ul>
+    </nav>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
