fix navigation links

--- a/web/channel/index-dev.html
+++ b/web/channel/index-dev.html
@@ -10,10 +10,10 @@
     <nav class="app-nav">
       <ul>
         <li>
-          <a href="/#/" title="Home">Home</a>
+          <a href="../#/" title="Home">Home</a>
         </li>
         <li>
-          <a href="/channel/" target="_self" title="Channel" class="active">Channel</a>
+          <a href="." target="_self" title="Channel" class="active">Channel</a>
         </li>
       </ul>
     </nav>
