render descriptions on channel page with Markdown syntax

--- a/web/channel/index-dev.html
+++ b/web/channel/index-dev.html
@@ -17,6 +17,8 @@
         </li>
       </ul>
     </nav>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/lib/marked.umd.min.js"></script>
     <script type="text/javascript" src="../target/scala-3.4.2/sc4pac-web-fastopt/main.js"></script>
   </body>
 </html>
