--- a/web/channel/index.html
+++ b/web/channel/index.html
@@ -17,6 +17,8 @@
         </li>
       </ul>
     </nav>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify/dist/purify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked/lib/marked.umd.min.js"></script>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
